@@ -141,12 +141,11 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
                 var me = session;
 
                 sessions.forEach(ss -> {
-                    if (ss != me)
-                        try {
-                            ss.getRemote().sendString(message);
-                        } catch (java.lang.Exception ex) {
-                            System.out.println("failed to send livereload message to remote: " + ss.getRemoteAddress());
-                        }
+                    if (ss != me) try {
+                        ss.getRemote().sendString(message);
+                    } catch (java.lang.Exception ex) {
+                        System.out.println("failed to send livereload message to remote: " + ss.getRemoteAddress());
+                    }
                 });
 
             }
@@ -178,9 +177,7 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
         }
 
         String removeSuffix(String s, String suffix) {
-            return s.endsWith(suffix)
-                    ? s.substring(0, s.length() - suffix.length())
-                    : s;
+            return s.endsWith(suffix) ? s.substring(0, s.length() - suffix.length()) : s;
         }
 
         record ClassPathWithModule<D>(File classPath, ModuleCode<D> mod) {
@@ -189,46 +186,32 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
         record RResource<D>(String name, D data) {
         }
 
-        record ModuleCode<D>(List<RResource<D>> resources,
-                             Map<String, List<String>> dependencies) {
+        record ModuleCode<D>(List<RResource<D>> resources, Map<String, List<String>> dependencies) {
         }
 
-        <E, D> ModuleCode<D> walkOver(Stream<E> stream,
-                                      Function<E, String> entryName,
-                                      Function<E, String> entryContent,
-                                      Function<E, D> entryData) {
+        <E, D> ModuleCode<D> walkOver(Stream<E> stream, Function<E, String> entryName, Function<E, String> entryContent, Function<E, D> entryData) {
 
             var dependencies = new HashMap<String, List<String>>();
-            var resources =
-                    stream.filter(e -> {
-                                var name = entryName.apply(e);
-                                if (name.endsWith(".js") || name.endsWith(".css")) return true;
-                                else {
-                                    if (name.endsWith(".js.dep")) {
-                                        var depData = entryContent.apply(e);
-                                        var depName = removeSuffix(name, ".dep");
-                                        if (!depData.isEmpty())
-                                            dependencies.put(
-                                                    depName,
-                                                    Arrays.stream(depData.split("\n"))
-                                                            .filter(s -> !s.isEmpty())
-                                                            .toList());
-                                    }
-                                    return false;
-                                }
-                            })
-                            .map(e -> new RResource<>(entryName.apply(e), entryData.apply(e)))
-                            .toList();
+            var resources = stream.filter(e -> {
+                var name = entryName.apply(e);
+                if (name.endsWith(".js") || name.endsWith(".css")) return true;
+                else {
+                    if (name.endsWith(".js.dep")) {
+                        var depData = entryContent.apply(e);
+                        var depName = removeSuffix(name, ".dep");
+                        if (!depData.isEmpty())
+                            dependencies.put(depName, Arrays.stream(depData.split("\n")).filter(s -> !s.isEmpty()).toList());
+                    }
+                    return false;
+                }
+            }).map(e -> new RResource<>(entryName.apply(e), entryData.apply(e))).toList();
 
             return new ModuleCode<>(resources, dependencies);
         }
 
         ModuleCode<String> walkOverJar(File jarFile) {
             try (var jar = new JarFile(jarFile)) {
-                return walkOver(jar.stream(),
-                        je -> je.getName().replace("/", "."),
-                        je -> readJar(jar, je),
-                        je -> readJar(jar, je));
+                return walkOver(jar.stream(), je -> je.getName().replace("/", "."), je -> readJar(jar, je), je -> readJar(jar, je));
             } catch (IOException ex) {
                 throw new RuntimeException(ex);
             }
@@ -238,12 +221,9 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
             Function<Path, String> pathToResourceName = path -> {
                 var fullName = path.toString();
                 if (fullName.endsWith(".js") || fullName.endsWith(".js.dep"))
-                    return fullName
-                            .replace(baseDir.toPath().toString(), "")
-                            .substring(1) // strip /
+                    return fullName.replace(baseDir.toPath().toString(), "").substring(1) // strip /
                             .replace("/", ".");
-                else
-                    return path.getFileName().toString(); // css
+                else return path.getFileName().toString(); // css
             };
 
             final Stream<Path> pathsStream;
@@ -254,30 +234,21 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
                 throw new RuntimeException(ex);
             }
 
-            return walkOver(
-                    pathsStream,
-                    pathToResourceName,
-                    p -> readFile(p.toFile()),
-                    p -> p);
+            return walkOver(pathsStream, pathToResourceName, p -> readFile(p.toFile()), p -> p);
         }
 
-        <D> void pushDependencies2(ModuleCode<D> module,
-                                   LinkedHashSet<RResource<D>> dest,
-                                   RResource<D> resource) {
+        <D> void pushDependencies2(ModuleCode<D> module, LinkedHashSet<RResource<D>> dest, RResource<D> resource) {
 
             var deps = module.dependencies.getOrDefault(resource.name, List.of());
             for (var dep : deps) {
                 // FIXME: try to find dep in library code
-                var depResource = module.resources.stream()
-                        .filter(r -> r.name.equals(dep))
-                        .findFirst();
+                var depResource = module.resources.stream().filter(r -> r.name.equals(dep)).findFirst();
 
 //                        ?: throw RuntimeException("""
 //                        cannot find resource for dependency: $deps
 //                        all resources: ${module.resources.joinToString("\n") { it.name }}
 //                        """.trimIndent())
-                depResource.ifPresent(dr ->
-                        pushDependencies2(module, dest, dr));
+                depResource.ifPresent(dr -> pushDependencies2(module, dest, dr));
             }
 
             dest.add(resource);
@@ -294,8 +265,7 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
         void reload() {
             var currentTime = System.currentTimeMillis();
 
-            var sourceSets = (org.gradle.api.tasks.SourceSetContainer)
-                    ((org.gradle.api.plugins.ExtensionAware) getProject()).getExtensions().getByName("sourceSets");
+            var sourceSets = (org.gradle.api.tasks.SourceSetContainer) ((org.gradle.api.plugins.ExtensionAware) getProject()).getExtensions().getByName("sourceSets");
 
             var resourceDir = sourceSets.getByName("main").getOutput().getResourcesDir();
             var stylesDir = resourceDir.toPath().resolve("styles");
@@ -324,58 +294,45 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
                 throw new RuntimeException(ex);
             }
 
-            if (!bundleDir.toFile().exists())
+            if (!bundleDir.toFile().exists()) try {
+                Files.createDirectory(bundleDir);
+            } catch (IOException ex) {
+                throw new RuntimeException(ex);
+            }
+
+            var localJs = sourceSets.getByName("main").getOutput().getClassesDirs().getFiles().stream().map(this::walkOverDirectory).reduce(new ModuleCode<>(List.of(), Map.of()), (m1, m2) -> new ModuleCode<>(new ArrayList<>(m2.resources) {{
+                addAll(m2.resources);
+            }}, new HashMap<>(m1.dependencies) {{
+                putAll(m2.dependencies);
+            }}));
+
+            var localCss = walkOverDirectory(stylesDir.toFile()).resources;
+            // FIXME: make listConcat & mapConcat method
+            var localModule = new ModuleCode<>(new ArrayList<>(localJs.resources) {{
+                addAll(localCss);
+            }}, localJs.dependencies);
+            var localResourceOrdered = buildDependencies(localModule);
+
+            var runtimeClassPath = getProject().getConfigurations().getByName("runtimeClasspath");
+            var libModules = StreamSupport.stream(runtimeClassPath.spliterator(), false).map(cp -> new ClassPathWithModule<>(cp, walkOverJar(cp))).filter(cpWithMod -> cpWithMod.mod.resources.stream().anyMatch(r -> r.name.endsWith(".js"))).flatMap(cpWithMod -> {
+                var libResourcesOrdered = buildDependencies(cpWithMod.mod);
+
+                var libJs = libResourcesOrdered.stream().filter(r -> r.name.endsWith(".js"));
+                var libCss = libResourcesOrdered.stream().filter(r -> r.name.endsWith(".css"));
+
+                var moduleName = removeSuffix(cpWithMod.classPath.toPath().getFileName().toString(), ".jar");
+                var moduleJsPath = Paths.get(bundleDir + "/" + moduleName + ".js");
+                var moduleCssPath = Paths.get(bundleDir + "/" + moduleName + ".css");
+
                 try {
-                    Files.createDirectory(bundleDir);
+                    Files.write(moduleJsPath, String.join("\n", libJs.map(RResource::data).toList()).getBytes());
+                    Files.write(moduleCssPath, String.join("\n", libCss.map(RResource::data).toList()).getBytes());
                 } catch (IOException ex) {
                     throw new RuntimeException(ex);
                 }
 
-            var localJs = sourceSets.getByName("main")
-                    .getOutput().getClassesDirs().getFiles().stream()
-                    .map(this::walkOverDirectory)
-                    .reduce(new ModuleCode<>(List.of(), Map.of()), (m1, m2) ->
-                            new ModuleCode<>(
-                                    new ArrayList<>(m2.resources) {{
-                                        addAll(m2.resources);
-                                    }},
-                                    new HashMap<>(m1.dependencies) {{
-                                        putAll(m2.dependencies);
-                                    }}));
-
-            var localCss = walkOverDirectory(stylesDir.toFile()).resources;
-            // FIXME: make listConcat & mapConcat method
-            var localModule = new ModuleCode<>(
-                    new ArrayList<>(localJs.resources) {{
-                        addAll(localCss);
-                    }},
-                    localJs.dependencies);
-            var localResourceOrdered = buildDependencies(localModule);
-
-            var runtimeClassPath = getProject().getConfigurations().getByName("runtimeClasspath");
-            var libModules = StreamSupport.stream(runtimeClassPath.spliterator(), false)
-                    .map(cp -> new ClassPathWithModule<>(cp, walkOverJar(cp)))
-                    .filter(cpWithMod -> cpWithMod.mod.resources.stream().anyMatch(r -> r.name.endsWith(".js")))
-                    .flatMap(cpWithMod -> {
-                        var libResourcesOrdered = buildDependencies(cpWithMod.mod);
-
-                        var libJs = libResourcesOrdered.stream().filter(r -> r.name.endsWith(".js"));
-                        var libCss = libResourcesOrdered.stream().filter(r -> r.name.endsWith(".css"));
-
-                        var moduleName = removeSuffix(cpWithMod.classPath.toPath().getFileName().toString(), ".jar");
-                        var moduleJsPath = Paths.get(bundleDir + "/" + moduleName + ".js");
-                        var moduleCssPath = Paths.get(bundleDir + "/" + moduleName + ".css");
-
-                        try {
-                            Files.write(moduleJsPath, String.join("\n", libJs.map(RResource::data).toList()).getBytes());
-                            Files.write(moduleCssPath, String.join("\n", libCss.map(RResource::data).toList()).getBytes());
-                        } catch (IOException ex) {
-                            throw new RuntimeException(ex);
-                        }
-
-                        return Stream.of(new RResource<>(moduleName + ".js", moduleJsPath),
-                                new RResource<>(moduleName + ".css", moduleCssPath));
-                    }).toList();
+                return Stream.of(new RResource<>(moduleName + ".js", moduleJsPath), new RResource<>(moduleName + ".css", moduleCssPath));
+            }).toList();
 
             System.out.println("lib js resolution took: " + (System.currentTimeMillis() - currentTime) + "ms");
 
@@ -394,31 +351,27 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
                     }
                 }
 
-                Files.write(bundleFile, Stream.of(libModules, localResourceOrdered)
-                        .flatMap(Collection::stream)
-                        .map(r -> {
-                            if (lastBuild < r.data.toFile().lastModified() && localResourceOrdered.contains(r)) {
-                                changeFiles.add(r.name);
-                                if (r.name.endsWith(".js")) {
-                                    try {
-                                        Files.writeString(bundleDir.resolve(r.name), replaceClassDeclarationWithWindow(Files.readString(r.data)));
-                                    } catch (IOException e) {
-                                        e.printStackTrace();
-                                    }
-                                }
-                            } else {
-                                try {
-                                    if (localResourceOrdered.contains(r) && r.name.endsWith(".js") && !Files.readString(r.data).startsWith("window")) {
-                                        Files.writeString(bundleDir.resolve(r.name), replaceClassDeclarationWithWindow(Files.readString(r.data)));
-                                    }
-                                } catch (IOException e) {
-                                    e.printStackTrace();
-                                }
+                Files.write(bundleFile, Stream.of(libModules, localResourceOrdered).flatMap(Collection::stream).map(r -> {
+                    if (lastBuild < r.data.toFile().lastModified() && localResourceOrdered.contains(r)) {
+                        changeFiles.add(r.name);
+                        if (r.name.endsWith(".js")) {
+                            try {
+                                Files.writeString(bundleDir.resolve(r.name), replaceClassDeclarationWithWindow(Files.readString(r.data)));
+                            } catch (IOException e) {
+                                e.printStackTrace();
                             }
-                            return r.name;
-                        })
-                        .collect(Collectors.joining("\n"))
-                        .getBytes());
+                        }
+                    } else {
+                        try {
+                            if (localResourceOrdered.contains(r) && r.name.endsWith(".js") && !Files.readString(r.data).startsWith("window")) {
+                                Files.writeString(bundleDir.resolve(r.name), replaceClassDeclarationWithWindow(Files.readString(r.data)));
+                            }
+                        } catch (IOException e) {
+                            e.printStackTrace();
+                        }
+                    }
+                    return r.name;
+                }).collect(Collectors.joining("\n")).getBytes());
 
                 Files.write(bundleFile, Collections.singleton("\nlivereload"), StandardOpenOption.APPEND);
 
@@ -456,8 +409,7 @@ public class JscripterBundlerPlugin implements Plugin<Project> {
 
         @TaskAction
         void prod() {
-            var sourceSets = (org.gradle.api.tasks.SourceSetContainer)
-                    ((org.gradle.api.plugins.ExtensionAware) getProject()).getExtensions().getByName("sourceSets");
+            var sourceSets = (org.gradle.api.tasks.SourceSetContainer) ((org.gradle.api.plugins.ExtensionAware) getProject()).getExtensions().getByName("sourceSets");
 
             var resourceDir = sourceSets.getByName("main").getOutput().getResourcesDir();
             var bundleDir = resourceDir.toPath().resolve("bundle");
